# l0l1-api

./: .gitiginore  .gitignore  CHANGELOG_POETRY.md  Makefile  POETRY_SETUP.md  README.md  pyproject.toml
docs/: api.md  cli.md  configuration.md  development.md  getting-started.md
docs/guides/: graph-learning-examples.md  graph-learning.md  jupyter.md  vscode-extension.md
examples/: ANALYTICS_WORKBENCH_GUIDE.md  MINIMAL_SETUP.md  PII_LEARNING_FLOW.md  UI_INTEGRATION_GUIDE.md  api_usage.py  cli_usage.py  jupyter_notebook_example.ipynb  vscode_extension_example.json
examples/vue_components/: NotebookInterface.vue  SQLCell.vue  SQLCellOutput.vue  SQLCellSimple.vue  SQLWorkbench.vue  useL0L1Analytics.js
examples/vue_components/composables/: useL0L1Analytics.js  useNotebook.js
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/layout/: Header.vue  Sidebar.vue
frontend/src/composables/: useApi.js
frontend/src/router/: index.js
frontend/src/stores/: api.js
frontend/src/views/: DashboardView.vue  DatabaseView.vue  LearningView.vue  SchemaView.vue  SettingsView.vue  WorkbenchView.vue  WorkspacesView.vue
l0l1/: app.py  cli.py  config.py  knowledge_graph.py  main.py  models.py  schemas.py  tasks.py  workspace_manager.py
l0l1/api/: jupyter.py  main.py  models.py  ui.py
l0l1/cli/: main.py
l0l1/core/: config.py
l0l1/demo/: demo_init.py  duckdb_generator.py
l0l1/integrations/: __init__.py
l0l1/integrations/ide/: __init__.py  handlers.py  protocol.py  server.py
l0l1/integrations/jupyter/: __init__.py  client.py  magic.py  widgets.py
l0l1/integrations/ui/: __init__.py  components.py  session.py
l0l1/models/: __init__.py  base.py  factory.py  providers.py
l0l1/modules/: knowledge_graph.py  openai_service.py  vector_db.py  workspace_manager.py
l0l1/services/: __init__.py  database_service.py  learning_service.py  pattern_store.py  pii_detector.py  schema_service.py  workspace_service.py
l0l1/templates/: index.html  workspace_visualisation.html
l0l1/views/: api.py  auth.py  query.py  schema.py  workspace.py
vscode-extension/: README.md  package.json  tsconfig.json
vscode-extension/src/: client.ts  commands.ts  diagnostics.ts  extension.ts  statusBar.ts
